fix navigation spacing

--- a/src/MemeGenerator/static/MemeGenerator/styles.css
+++ b/src/MemeGenerator/static/MemeGenerator/styles.css
@@ -24,8 +24,9 @@ body {
 
 .navigation a, .navigation a:visited {
 	text-decoration: none;
-	cursor: auto;
+	cursor: pointer;
 	color: inherit;
+	padding: 14px 16px;
 }
 
 .navigation a:hover {
